# VNL

./: CMakeLists.txt
src/config/cmake/Modules/: VXLConfig.cmake.in  VXLConfig_export.cmake.in
src/config/cmake/export/: VXLCreateProject.cmake
